# app_ef

./: .env.staging.template  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PHASES_3_4_5_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  TECHNICAL_ARCHITECTURE.md  USER_GUIDE.md  app.toml  deploy-staging.sh  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  server.py  validate_structure.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  export_openapi.py  pyproject.toml  pytest.ini  requirements.txt  test_imports.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  websockets.py
backend/app/api/v1/: auth.py  components.py  pipelines.py  projects.py  results.py  sources.py
backend/app/core/: __init__.py  auth.py  config.py  dependencies.py  ef_wrapper.py  storage.py
backend/app/models/: __init__.py  api_models.py
backend/app/services/: project_service.py
backend/tests/: __init__.py  test_api_components.py  test_api_pipelines.py  test_api_projects.py  test_api_sources.py  test_app.py  test_auth.py  test_integration.py  test_results.py
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: README.md  commands.spec.ts  corpus-flow.spec.ts  navigation.spec.ts  smoke.spec.ts  tsconfig.json
frontend/e2e/_support/: backend.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  openaiKey.ts  openapi.d.ts  openapi.json  schema.ts
frontend/src/assistant/: engine.ts
frontend/src/commands/: corpus.ts  (+3 more)
misc/: DEVELOPMENT_ROADMAP.md
misc/docs/: app_ef_notes.md
nginx/: staging.conf
(+41 files in other folders)
